force-app/main/default/objects/Quote_Approval_Request__c/Quote_Approval_Request__c.object-meta.xml
<CustomObject>
    <label>Quote_Approval_Request</label>
    <nameField>
        <displayFormat>QAR-{0000000}</displayFormat>
        <label>Quote_Approval_Request 이름</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>