force-app/main/default/objects/Quote_Approval_Request__c/fields/Approval_Form_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Approval_Form_Document_Id__c</fullName>
    <label>승인 문서 ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>