force-app/main/default/objects/Quote_Approval_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>결재자</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Quote Approvals</relationshipLabel>
    <relationshipName>AssignedQuoteApprovals</relationshipName>
    <type>Lookup</type>
</CustomField>