force-app/main/default/objects/Quote_Approval_Request__c/fields/Decision_By__c.field-meta.xml
<CustomField>
    <fullName>Decision_By__c</fullName>
    <label>처리자</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Decided Quote Approvals</relationshipLabel>
    <relationshipName>DecidedQuoteApprovals</relationshipName>
    <type>Lookup</type>
</CustomField>