force-app/main/default/objects/Quote_Approval_Request__c/fields/Decision_Comment__c.field-meta.xml
<CustomField>
    <fullName>Decision_Comment__c</fullName>
    <label>결재 의견</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>