force-app/main/default/objects/Quote_Approval_Request__c/fields/OpporTunity__c.field-meta.xml
<CustomField>
    <fullName>OpporTunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Quote_Approval_Request</relationshipLabel>
    <relationshipName>Quote_Approval_Request</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>