force-app/main/default/objects/Quote_Approval_Request__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>견적</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Quote Approval Requests</relationshipLabel>
    <relationshipName>QuoteApprovalRequests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>