force-app/main/default/objects/Quote_Approval_Request__c/fields/Request_Detail__c.field-meta.xml
<CustomField>
    <fullName>Request_Detail__c</fullName>
    <label>요청 상세</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>