force-app/main/default/objects/Quote_Approval_Request__c/fields/Requested_At__c.field-meta.xml
<CustomField>
    <fullName>Requested_At__c</fullName>
    <label>요청 일시</label>
    <type>DateTime</type>
</CustomField>