force-app/main/default/objects/Quote_Approval_Request__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <label>요청자</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Requested Quote Approvals</relationshipLabel>
    <relationshipName>RequestedQuoteApprovals</relationshipName>
    <type>Lookup</type>
</CustomField>