force-app/main/default/objects/Quote_Approval_Request__c/fields/Responded_At__c.field-meta.xml
<CustomField>
    <fullName>Responded_At__c</fullName>
    <label>처리 일시</label>
    <type>DateTime</type>
</CustomField>