force-app/main/default/objects/Quote_Approval_Request__c/fields/Snapshot_Json__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Json__c</fullName>
    <label>스냅샷 JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>