force-app/main/default/objects/Quote_Approval_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>결재 상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>초안</fullName>
                <default>true</default>
                <label>초안</label>
            </value>
            <value>
                <fullName>승인대기</fullName>
            </value>
            <value>
                <fullName>승인</fullName>
            </value>
            <value>
                <fullName>반려</fullName>
            </value>
            <value>
                <fullName>취소</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>