force-app/main/default/objects/Quote_Approval_Request__c/fields/Submitted_Pdf_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Pdf_Document_Id__c</fullName>
    <label>제출 PDF 문서 ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>