force-app/main/default/objects/Quote_Approval_Request__c/validationRules/Prevent_Self_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Self_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Requester__c)),
    NOT(ISBLANK(Approver__c)),
    Requester__c = Approver__c
)</errorConditionFormula>
    <errorDisplayField>Approver__c</errorDisplayField>
    <errorMessage>요청자와 결재자는 동일할 수 없습니다. 다른 결재자를 지정해 주세요.</errorMessage>
</ValidationRule>