force-app/main/default/objects/Quote_Approval_Request__c/validationRules/Require_Approver.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Approver</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Approver__c)</errorConditionFormula>
    <errorDisplayField>Approver__c</errorDisplayField>
    <errorMessage>결재자를 지정해 주세요.</errorMessage>
</ValidationRule>