force-app/main/default/objects/Quote_Approval_Request__c/validationRules/Require_Request_Detail.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Request_Detail</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Request_Detail__c)</errorConditionFormula>
    <errorDisplayField>Request_Detail__c</errorDisplayField>
    <errorMessage>결재 요청 상세를 입력해 주세요.</errorMessage>
</ValidationRule>