force-app/main/default/objects/Quote_Approval_Request__c/validationRules/Require_Requester.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Requester</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Requester__c)</errorConditionFormula>
    <errorDisplayField>Requester__c</errorDisplayField>
    <errorMessage>요청자를 지정해 주세요.</errorMessage>
</ValidationRule>